@@ -1,8 +1,11 @@
 package com.github.bottomlessarchive.loa.vault.service;
 
 import com.github.bottomlessarchive.loa.compression.domain.DocumentCompression;
+import com.github.bottomlessarchive.loa.compression.service.file.FileCompressionService;
 import com.github.bottomlessarchive.loa.document.service.DocumentManipulator;
 import com.github.bottomlessarchive.loa.document.service.domain.DocumentEntity;
+import com.github.bottomlessarchive.loa.stage.service.StageLocationFactory;
+import com.github.bottomlessarchive.loa.stage.service.domain.StageLocation;
 import com.github.bottomlessarchive.loa.vault.domain.exception.StorageAccessException;
 import com.github.bottomlessarchive.loa.vault.service.backend.service.VaultDocumentStorage;
 import com.github.bottomlessarchive.loa.vault.service.location.VaultLocation;
@@ -13,6 +16,9 @@ import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.UUID;
 
 @Slf4j
 @Service
@@ -23,6 +29,8 @@ public class RecompressorService {
     private final DocumentManipulator documentManipulator;
     private final VaultLocationFactory vaultLocationFactory;
     private final VaultDocumentStorage vaultDocumentStorage;
+    private final StageLocationFactory stageLocationFactory;
+    private final FileCompressionService fileCompressionService;
 
     public void recompress(final DocumentEntity documentEntity, final DocumentCompression documentCompression) {
         if (log.isInfoEnabled()) {
@@ -30,15 +38,33 @@ public class RecompressorService {
                     documentEntity.getCompression(), documentCompression);
         }
 
+        if (documentEntity.getCompression().equals(documentCompression)) {
+            return;
+        }
+
         try (InputStream documentContentInputStream = vaultDocumentManager.readDocument(documentEntity)
                 .getInputStream()) {
-            final byte[] documentContent = documentContentInputStream.readAllBytes();
+
+            final StageLocation originalContent = stageLocationFactory.getLocation(UUID.randomUUID());
+            //TODO: This can be optimized. We shouldn't read the whole document into memory! Stream it instead!
+            Files.write(originalContent.getPath(), documentContentInputStream.readAllBytes());
+
+            final Path compressedFilePath = fileCompressionService.compressDocument(originalContent.getPath(), documentCompression);
 
             vaultDocumentManager.removeDocument(documentEntity);
 
             final VaultLocation vaultLocation = vaultLocationFactory.getLocation(documentEntity, documentCompression);
 
-            vaultDocumentStorage.persistDocument(documentEntity, documentContent, vaultLocation);
+            vaultDocumentStorage.persistDocument(documentEntity, Files.newInputStream(compressedFilePath), vaultLocation,
+                    Files.size(compressedFilePath));
+
+            originalContent.cleanup();
+
+            // In case when the compression target is NONE, then the path for the original content and the new content is the same
+            // the file is already deleted by the originalContent.cleanup() call.
+            if (!originalContent.getPath().equals(compressedFilePath)) {
+                Files.delete(compressedFilePath);
+            }
 
             documentManipulator.updateCompression(documentEntity.getId(), documentCompression);
         } catch (final IOException e) {
